# rest-cpp-data-science

./: .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-builder  Makefile  README.md  main-api-server.cpp
.openapi-generator/: FILES
api/: EchoApi.cpp  EchoApi.h  GradientDescentApi.cpp  GradientDescentApi.h  LinearAlgebraApi.cpp  LinearAlgebraApi.h  MachineLearningApi.cpp  MachineLearningApi.h  MysqrtApi.cpp  MysqrtApi.h  StatsApi.cpp  StatsApi.h  StrengthApi.cpp  StrengthApi.h
clients/cpp-restsdk/: CMakeLists.txt  README.md
clients/cpp-restsdk/.openapi-generator/: FILES
clients/cpp-restsdk/src/: ApiClient.cpp  ApiConfiguration.cpp  ApiException.cpp  HttpContent.cpp  JsonBody.cpp  ModelBase.cpp  MultipartFormData.cpp  Object.cpp
clients/python/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
clients/python/.openapi-generator/: FILES
clients/python/openapi_client/: __init__.py  api_client.py  configuration.py  exceptions.py  rest.py  schemas.py
impl/: EchoApiImpl.cpp  EchoApiImpl.h  GradientDescentApiImpl.cpp  GradientDescentApiImpl.h  LinearAlgebraApiImpl.cpp  LinearAlgebraApiImpl.h  MachineLearningApiImpl.cpp  MachineLearningApiImpl.h  MysqrtApiImpl.cpp  MysqrtApiImpl.h  StatsApiImpl.cpp  StatsApiImpl.h  StrengthApiImpl.cpp  StrengthApiImpl.h
include/: runner.h
model/: De_mean_input.cpp  De_mean_input.h  De_mean_output.cpp  De_mean_output.h
openapi/: openapi.yaml
openapi/paths/accuracy/: accuracy-input-example.json  accuracy-input.yaml  accuracy.yaml
openapi/paths/bucketize/: bucketize.yaml
openapi/paths/correlation/: correlation.yaml
openapi/paths/correlation_matrix/: correlation_matrix.yaml
openapi/paths/covariance/: covariance.yaml
openapi/paths/data_range/: data_range.yaml
openapi/paths/de_mean/: de_mean-output.yaml  de_mean.yaml
openapi/paths/difference_quotient/: difference_quotient.yaml
openapi/paths/distance/: distance.yaml
openapi/paths/dot/: dot.yaml
openapi/paths/echo/: echo.yaml
openapi/paths/estimate_gradient/: estimate_gradient.yaml
openapi/paths/f1_score/: f1_score.yaml
openapi/paths/get_column/: get_column.yaml
openapi/paths/get_row/: get_row.yaml
openapi/paths/in_random_order/: in_random_order.yaml
openapi/paths/interquartile_range/: interquartile_range.yaml
openapi/paths/magnitude/: magnitude.yaml
openapi/paths/matrix_add/: matrix_add.yaml
openapi/paths/maximize_batch/: maximize_batch.yaml
runner/: run-my-sqrt.cpp  run-my-sqrt.h  run-strength.cpp  run-strength.h
tests/python-nextgen/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
tests/test-impl/: test-decision-trees.cpp  test-gradient-descent.cpp  test-linear-algebra.cpp  test-machine-learning.cpp  test-mysqrt.cpp  test-probability.cpp  test-stats.cpp  test-strength.cpp
(+910 files in other folders)
